project 2 part 1
