# models/taskModel.js
@@ -1,0 +1,34 @@
+const mongoose = require('mongoose');
+
+const taskSchema = new mongoose.Schema({
+    title: {
+        type: String,
+        required: [true, 'Title is required'],
+        trim: true
+    },
+    description: {
+        type: String,
+        trim: true
+    },
+    dueDate: Date,
+    priority: {
+        type: String,
+        enum: ['High', 'Medium', 'Low'],
+        default: 'Medium'
+    },
+    creationDate: {
+        type: Date,
+        default: Date.now
+    },
+    lastUpdated: Date,
+    category: {
+        type: String,
+        trim: true
+    },
+    completed: {
+        type: Boolean,
+        default: false
+    }
+});
+
+module.exports = mongoose.model('Task', taskSchema);
