# routes/index.js
@@ -6,6 +6,8 @@ router.get('/', (req, res) => {
     //#swagger.tags=['Hello World]
     res.send('Hello World');
 });
+
 router.use('/users', require('./users'));
+router.use('/tasks', require('./tasks'));
 
 module.exports = router;
